...
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout_alert_header">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_alert_environment"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:insetTop="0dp"
...
                android:textSize="13sp"
                android:singleLine="true"
                android:ellipsize="none"
                app:cornerRadius="18dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_alert_pending"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
...
                android:textSize="13sp"
                android:singleLine="true"
                android:ellipsize="none"
                app:cornerRadius="18dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_alert_resolved"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
...
    <!--
        ====================================================================
        04. 警報列表
        RecyclerView for Alerts
        ====================================================================
    --><androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_alert_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:clipToPadding="false"
        android:paddingStart="16dp"
        android:paddingTop="4dp"
...
